tests/unit-fail-compilation/j044b.c.ref
j044b.c: In function ‘main’:
j044b.c:4:7: error: pointer value used where a floating point value was expected
       (float)p;
       ^
compilation terminated due to -Wfatal-errors.
Translation failed (config dumped). Run kcc -d -Werror -Wfatal-errors j044b.c to see commands run.
