tests/unit-fail-compilation/j044b.c
int main(void) {
      int x = 5;
      int *p = &x;
      (float)p;
}
